# django-filter

./: .bumpversion.cfg  .gitignore  .readthedocs.yaml  .travis.yml  AUTHORS  AUTHORS.txt  CHANGES.rst  COPYRIGHT  Dockerfile  MANIFEST.in  Makefile  README.md  README.rst  README.txt  TODO.txt  codecov.yml  data.json  endpoint.json  inlang.config.js  manage.py  notes.txt  pyproject.toml  runserver error  runshell.py  runtests.py  setup.cfg  setup.py  testsettings.py  tox.ini  yesglot.toml
.azure_pipelines/: azure-pipelines.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: black.yml  checkmarx-analysis.yml  codacy-analysis.yml  codeql-analysis.yml  crunch42-analysis.yml  fortify-analysis.yml  kubesec-analysis.yml  ossar-analysis.yml  prisma-analysis.yml  semgrep-analysis.yml  shiftleft-analysis.yml  snyk-infrastructure-analysis.yml  synopsys-io-analysis.yml  tests.yml  veracode-analysis.yml
django_filters/: __init__.py  compat.py  conf.py  constants.py  exceptions.py  fields.py  filters.py  filterset.py  groups.py  models.py  testsettings.py  utils.py  views.py  widgets.py
django_filters/fixtures/: test_data.json
django_filters/generic/: classbase.py  classbased.py  functional.py
django_filters/locale/ar/LC_MESSAGES/: django.mo  django.po
django_filters/locale/be/LC_MESSAGES/: django.po
django_filters/locale/bg/LC_MESSAGES/: django.mo  django.po
django_filters/locale/cs/LC_MESSAGES/: django.po
django_filters/locale/da/LC_MESSAGES/: django.po
django_filters/locale/de/LC_MESSAGES/: django.mo  django.po
django_filters/locale/el/LC_MESSAGES/: django.mo  django.po
django_filters/locale/es/LC_MESSAGES/: django.mo  django.po
django_filters/locale/es_AR/LC_MESSAGES/: django.po
django_filters/locale/fa/LC_MESSAGES/: django.po
django_filters/locale/fi/LC_MESSAGES/: django.po
django_filters/locale/fr/LC_MESSAGES/: django.mo  django.po
django_filters/locale/it/LC_MESSAGES/: django.mo  django.po
django_filters/locale/nl/LC_MESSAGES/: django.po
django_filters/locale/pl/LC_MESSAGES/: django.mo  django.po
django_filters/locale/pt_BR/LC_MESSAGES/: django.po
django_filters/locale/ro/LC_MESSAGES/: django.po
django_filters/locale/ru/LC_MESSAGES/: django.mo  django.po
django_filters/locale/sk/LC_MESSAGES/: django.po
django_filters/rest_framework/: __init__.py  backends.py  filters.py  filterset.py
django_filters/tests/: __init__.py  fields.py  models.py  test_urls.py  tests.py
django_filters/tests/fixtures/: test_data.json  test_data_django_13.json
docs/: Makefile  conf.py  index.txt  install.txt  make.bat  migration.txt  rest_framework.txt  tests.txt  usage.txt
docs/dev/: tests.txt
docs/guide/: install.txt  migration.txt  rest_framework.txt  tips.txt  usage.txt
docs/ref/: fields.txt  filters.txt  filterset.txt  groups.txt  settings.txt  widgets.txt
filter/: __init__.py  fields.py  filters.py  filterset.py  models.py  tests.py  views.py  widgets.py
filter/fixtures/: test_comments.json  test_data.json  test_users.json
filter/tests/: __init__.py  test_urls.py  tests.py
htmlcov/: class_index.html  d_588fd493a6e68a1a___init___py.html  d_588fd493a6e68a1a_backends_py.html  d_588fd493a6e68a1a_filters_py.html  d_588fd493a6e68a1a_filterset_py.html  d_851cf42b37db3c12___init___py.html  d_851cf42b37db3c12_compat_py.html  d_851cf42b37db3c12_conf_py.html  d_851cf42b37db3c12_constants_py.html  d_851cf42b37db3c12_exceptions_py.html  d_851cf42b37db3c12_fields_py.html  d_851cf42b37db3c12_filters_py.html  d_851cf42b37db3c12_filterset_py.html  d_851cf42b37db3c12_utils_py.html  d_851cf42b37db3c12_views_py.html  d_851cf42b37db3c12_widgets_py.html  function_index.html  index.html  status.json  z_588fd493a6e68a1a___init___py.html  z_588fd493a6e68a1a_backends_py.html  z_588fd493a6e68a1a_filters_py.html  z_588fd493a6e68a1a_filterset_py.html  z_851cf42b37db3c12___init___py.html  z_851cf42b37db3c12_compat_py.html  z_851cf42b37db3c12_conf_py.html  z_851cf42b37db3c12_constants_py.html  z_851cf42b37db3c12_exceptions_py.html  z_851cf42b37db3c12_fields_py.html  z_851cf42b37db3c12_filters_py.html  z_851cf42b37db3c12_filterset_py.html  z_851cf42b37db3c12_utils_py.html  z_851cf42b37db3c12_views_py.html  z_851cf42b37db3c12_widgets_py.html
requirements/: docs.txt  maintainer.txt  test-ci.txt  test.txt  travis-ci.txt
test_django_filters/: __init__.py  field_tests.py  filter_tests.py  filtering_tests.py  filterset_tests.py  form_tests.py  models.py  tests.py  urls.py  view_tests.py  widget_tests.py
tests/: field_tests.py  filter_tests.py  filtering_tests.py  filters.py  filterset_tests.py  form_tests.py  models.py  settings.py  test_conf.py  test_deprecations.py  test_fields.py  test_filtering.py  test_filters.py  test_filterset.py  test_forms.py  test_groups.py  test_utils.py  test_views.py  test_widgets.py  urls.py  utils.py  widget_tests.py
tests/rest_framework/: __init__.py  apps.py  models.py  test_backends.py  test_filters.py  test_filterset.py  test_integration.py
tests/templates/tests/: book_filter.html
(+5 files in other folders)
