[metadata]
license-file = LICENSE

[coverage:run]
branch = true

[coverage:report]
show_missing = true
exclude_lines =
    pragma: no cover
    raise NotImplementedError

[isort]
skip=.tox
atomic=true
multi_line_output=3
known_standard_library=mock
known_third_party=django,pytz,rest_framework
known_first_party=django_filters

[flake8]
max_line_length = 120
max_complexity = 10
