[metadata]
license-file = LICENSE

[isort]
skip=.tox
atomic=true
multi_line_output=3
include_trailing_comma=True
force_grid_wrap=0
use_parentheses=True
known_standard_library=mock
known_third_party=django,pytz,rest_framework
known_first_party=django_filters

[flake8]
max_line_length = 120
max_complexity = 10
