[metadata]
license-file = LICENSE

[isort]
skip=.tox
atomic=true
multi_line_output=3
extra_standard_library=mock
known_third_party=django,pytz,rest_framework
known_first_party=django_filters
include_trailing_comma=True
force_grid_wrap=0
use_parentheses=True

[flake8]
max_line_length = 88
max_complexity = 10
